cnn implemented 92.45% accuracy

--- a/MNIST_CHARACTERS.ipynb
+++ b/MNIST_CHARACTERS.ipynb
@@ -180,6 +180,21 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "226509bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#settings \n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "learning_rate = 0.01\n",
+    "batch_size = 64\n",
+    "epochs = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d8571bec",
    "metadata": {},
    "outputs": [],
@@ -204,12 +219,12 @@
     "        #x = F.softmax(self.fc3(x), dim = -1)\n",
     "        return x\n",
     "\n",
-    "model = Net().to(\"cuda\")"
+    "model = Net().to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "345488e0",
    "metadata": {},
    "outputs": [
@@ -219,28 +234,14 @@
        "torch.Size([64, 26])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_tensor = torch.rand(64,1,28,28, device='cuda')\n",
+    "demo_tensor = torch.rand(64,1,28,28, device=device)\n",
     "model(demo_tensor).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "226509bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#constants \n",
-    "\n",
-    "learning_rate = 0.01\n",
-    "batch_size = 64\n",
-    "epochs = 6"
    ]
   },
   {
@@ -275,147 +276,82 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 5.328837  [    0/124800]\n",
-      "loss: 1.831570  [ 6400/124800]\n",
-      "loss: 1.048697  [12800/124800]\n",
-      "loss: 0.719578  [19200/124800]\n",
-      "loss: 0.502145  [25600/124800]\n",
-      "loss: 0.303658  [32000/124800]\n",
-      "loss: 0.368595  [38400/124800]\n",
-      "loss: 0.411579  [44800/124800]\n",
-      "loss: 0.324050  [51200/124800]\n",
-      "loss: 0.498865  [57600/124800]\n",
-      "loss: 0.555361  [64000/124800]\n",
-      "loss: 0.365463  [70400/124800]\n",
-      "loss: 0.587256  [76800/124800]\n",
-      "loss: 0.409623  [83200/124800]\n",
-      "loss: 0.338067  [89600/124800]\n",
-      "loss: 0.659792  [96000/124800]\n",
-      "loss: 0.354252  [102400/124800]\n",
-      "loss: 0.410724  [108800/124800]\n",
-      "loss: 0.375634  [115200/124800]\n",
-      "loss: 0.315309  [121600/124800]\n",
+      "[1,   200] loss: 1.872\n",
+      "[1,   400] loss: 0.857\n",
+      "[1,   600] loss: 0.628\n",
+      "[1,   800] loss: 0.538\n",
+      "[1,  1000] loss: 0.465\n",
+      "[1,  1200] loss: 0.439\n",
+      "[1,  1400] loss: 0.398\n",
+      "[1,  1600] loss: 0.380\n",
+      "[1,  1800] loss: 0.372\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 0.229727  [    0/124800]\n",
-      "loss: 0.273487  [ 6400/124800]\n",
-      "loss: 0.238425  [12800/124800]\n",
-      "loss: 0.549547  [19200/124800]\n",
-      "loss: 0.263314  [25600/124800]\n",
-      "loss: 0.560152  [32000/124800]\n",
-      "loss: 0.255224  [38400/124800]\n",
-      "loss: 0.220784  [44800/124800]\n",
-      "loss: 0.250776  [51200/124800]\n",
-      "loss: 0.221181  [57600/124800]\n",
-      "loss: 0.222219  [64000/124800]\n",
-      "loss: 0.423762  [70400/124800]\n",
-      "loss: 0.285283  [76800/124800]\n",
-      "loss: 0.248612  [83200/124800]\n",
-      "loss: 0.155232  [89600/124800]\n",
-      "loss: 0.278747  [96000/124800]\n",
-      "loss: 0.250768  [102400/124800]\n",
-      "loss: 0.399075  [108800/124800]\n",
-      "loss: 0.269962  [115200/124800]\n",
-      "loss: 0.315211  [121600/124800]\n",
+      "[2,   200] loss: 0.325\n",
+      "[2,   400] loss: 0.317\n",
+      "[2,   600] loss: 0.307\n",
+      "[2,   800] loss: 0.303\n",
+      "[2,  1000] loss: 0.294\n",
+      "[2,  1200] loss: 0.287\n",
+      "[2,  1400] loss: 0.299\n",
+      "[2,  1600] loss: 0.280\n",
+      "[2,  1800] loss: 0.286\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 0.129340  [    0/124800]\n",
-      "loss: 0.160440  [ 6400/124800]\n",
-      "loss: 0.113075  [12800/124800]\n",
-      "loss: 0.237937  [19200/124800]\n",
-      "loss: 0.139860  [25600/124800]\n",
-      "loss: 0.208569  [32000/124800]\n",
-      "loss: 0.133971  [38400/124800]\n",
-      "loss: 0.323987  [44800/124800]\n",
-      "loss: 0.286672  [51200/124800]\n",
-      "loss: 0.232778  [57600/124800]\n",
-      "loss: 0.167504  [64000/124800]\n",
-      "loss: 0.326513  [70400/124800]\n",
-      "loss: 0.473813  [76800/124800]\n",
-      "loss: 0.348350  [83200/124800]\n",
-      "loss: 0.479295  [89600/124800]\n",
-      "loss: 0.305517  [96000/124800]\n",
-      "loss: 0.379028  [102400/124800]\n",
-      "loss: 0.142767  [108800/124800]\n",
-      "loss: 0.110504  [115200/124800]\n",
-      "loss: 0.283593  [121600/124800]\n",
+      "[3,   200] loss: 0.241\n",
+      "[3,   400] loss: 0.256\n",
+      "[3,   600] loss: 0.234\n",
+      "[3,   800] loss: 0.255\n",
+      "[3,  1000] loss: 0.254\n",
+      "[3,  1200] loss: 0.254\n",
+      "[3,  1400] loss: 0.249\n",
+      "[3,  1600] loss: 0.233\n",
+      "[3,  1800] loss: 0.239\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 0.099823  [    0/124800]\n",
-      "loss: 0.324454  [ 6400/124800]\n",
-      "loss: 0.122568  [12800/124800]\n",
-      "loss: 0.271635  [19200/124800]\n",
-      "loss: 0.147755  [25600/124800]\n",
-      "loss: 0.058726  [32000/124800]\n",
-      "loss: 0.232072  [38400/124800]\n",
-      "loss: 0.050585  [44800/124800]\n",
-      "loss: 0.259768  [51200/124800]\n",
-      "loss: 0.152730  [57600/124800]\n",
-      "loss: 0.186061  [64000/124800]\n",
-      "loss: 0.133449  [70400/124800]\n",
-      "loss: 0.477374  [76800/124800]\n",
-      "loss: 0.159330  [83200/124800]\n",
-      "loss: 0.110313  [89600/124800]\n",
-      "loss: 0.224402  [96000/124800]\n",
-      "loss: 0.111646  [102400/124800]\n",
-      "loss: 0.247467  [108800/124800]\n",
-      "loss: 0.125154  [115200/124800]\n",
-      "loss: 0.096196  [121600/124800]\n",
+      "[4,   200] loss: 0.218\n",
+      "[4,   400] loss: 0.217\n",
+      "[4,   600] loss: 0.217\n",
+      "[4,   800] loss: 0.216\n",
+      "[4,  1000] loss: 0.225\n",
+      "[4,  1200] loss: 0.222\n",
+      "[4,  1400] loss: 0.214\n",
+      "[4,  1600] loss: 0.224\n",
+      "[4,  1800] loss: 0.220\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 0.243686  [    0/124800]\n",
-      "loss: 0.210304  [ 6400/124800]\n",
-      "loss: 0.261030  [12800/124800]\n",
-      "loss: 0.158038  [19200/124800]\n",
-      "loss: 0.250477  [25600/124800]\n",
-      "loss: 0.188098  [32000/124800]\n",
-      "loss: 0.542850  [38400/124800]\n",
-      "loss: 0.263188  [44800/124800]\n",
-      "loss: 0.107249  [51200/124800]\n",
-      "loss: 0.214504  [57600/124800]\n",
-      "loss: 0.363544  [64000/124800]\n",
-      "loss: 0.107960  [70400/124800]\n",
-      "loss: 0.117466  [76800/124800]\n",
-      "loss: 0.114074  [83200/124800]\n",
-      "loss: 0.169493  [89600/124800]\n",
-      "loss: 0.233806  [96000/124800]\n",
-      "loss: 0.240833  [102400/124800]\n",
-      "loss: 0.288635  [108800/124800]\n",
-      "loss: 0.170611  [115200/124800]\n",
-      "loss: 0.159557  [121600/124800]\n",
+      "[5,   200] loss: 0.195\n",
+      "[5,   400] loss: 0.194\n",
+      "[5,   600] loss: 0.186\n",
+      "[5,   800] loss: 0.210\n",
+      "[5,  1000] loss: 0.200\n",
+      "[5,  1200] loss: 0.203\n",
+      "[5,  1400] loss: 0.208\n",
+      "[5,  1600] loss: 0.202\n",
+      "[5,  1800] loss: 0.198\n",
       "Epoch 6\n",
       "-------------------------------\n",
-      "loss: 0.172254  [    0/124800]\n",
-      "loss: 0.221790  [ 6400/124800]\n",
-      "loss: 0.163829  [12800/124800]\n",
-      "loss: 0.295954  [19200/124800]\n",
-      "loss: 0.197294  [25600/124800]\n",
-      "loss: 0.177154  [32000/124800]\n",
-      "loss: 0.126326  [38400/124800]\n",
-      "loss: 0.067367  [44800/124800]\n",
-      "loss: 0.231411  [51200/124800]\n",
-      "loss: 0.196619  [57600/124800]\n",
-      "loss: 0.200269  [64000/124800]\n",
-      "loss: 0.122635  [70400/124800]\n",
-      "loss: 0.200170  [76800/124800]\n",
-      "loss: 0.389288  [83200/124800]\n",
-      "loss: 0.127301  [89600/124800]\n",
-      "loss: 0.184710  [96000/124800]\n",
-      "loss: 0.140206  [102400/124800]\n",
-      "loss: 0.170492  [108800/124800]\n",
-      "loss: 0.504971  [115200/124800]\n",
-      "loss: 0.157961  [121600/124800]\n",
+      "[6,   200] loss: 0.178\n",
+      "[6,   400] loss: 0.178\n",
+      "[6,   600] loss: 0.179\n",
+      "[6,   800] loss: 0.184\n",
+      "[6,  1000] loss: 0.190\n",
+      "[6,  1200] loss: 0.175\n",
+      "[6,  1400] loss: 0.199\n",
+      "[6,  1600] loss: 0.189\n",
+      "[6,  1800] loss: 0.183\n",
       "training finished\n"
      ]
     }
    ],
    "source": [
-    "for t in range(epochs):\n",
-    "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
+    "for epoch in range(epochs):\n",
+    "    running_loss = 0.0\n",
+    "    print(f\"Epoch {epoch+1}\\n-------------------------------\")\n",
     "    size = len(train_dataloader.dataset)\n",
     "    for batch, (x, y) in enumerate(train_dataloader):\n",
     "        x = torch.unsqueeze(x ,1)\n",
-    "        x, y = x.to(\"cuda\"), y.to(\"cuda\")\n",
+    "        x, y = x.to(device), y.to(device)\n",
     "        pred = model(x)\n",
     "        loss = loss_fn(pred, y)\n",
     "        # print(loss)\n",
@@ -423,10 +359,11 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        with torch.no_grad():\n",
-    "            if batch % 100 == 0:\n",
-    "                loss, current = loss.item(), batch * len(x)\n",
-    "                print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "        if batch % 200 == 199:\n",
+    "            print(f'[{epoch + 1}, {batch + 1:5d}] loss: {running_loss / 200:.3f}')\n",
+    "            running_loss = 0.0\n",
     "print('training finished')"
    ]
   },
@@ -442,10 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "0359695d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy of model = 92.45%\n"
+     ]
+    }
+   ],
    "source": [
     "count = 0\n",
     "\n",
@@ -454,55 +399,15 @@
     "with torch.no_grad():\n",
     "    for (x, y) in test_dataloader:\n",
     "        x = torch.unsqueeze(x, 1)\n",
-    "        x, y = x.to(\"cuda\"), y.to(\"cuda\")\n",
-    "        count += torch.sum(torch.argmax(model(x),1) == torch.argmax(y,1))"
+    "        x, y = x.to(device), y.to(device)\n",
+    "        count += torch.sum(torch.argmax(model(x),1) == torch.argmax(y,1))\n",
+    "#accuracy\n",
+    "print(f'accuracy of model = {count/m_test * 100:.2f}%')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "64e8dc09",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(19164, device='cuda:0')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "f61693ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(92.1346, device='cuda:0')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count/m_test * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1448dc38",
    "metadata": {},
    "outputs": [
@@ -525,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "20d8ca09",
    "metadata": {},
    "outputs": [
@@ -535,7 +440,7 @@
        "'b'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "de3687c8",
    "metadata": {},
    "outputs": [
@@ -557,7 +462,7 @@
        "torch.Size([1, 26])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "cf367346",
    "metadata": {},
    "outputs": [
@@ -579,7 +484,7 @@
        "'l'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,7 +504,7 @@
    "source": [
     "arr = X_test[9402]\n",
     "show_img(arr)\n",
-    "test_tensor = (arr).to(\"cuda\")\n",
+    "test_tensor = (arr).to(device)\n",
     "test_tensor = torch.unsqueeze(test_tensor, 0)\n",
     "#test_tensor = torch.unsqueeze(test_tensor, 0)\n",
     "letters = [chr(ord('a') + i) for i in range(26)]\n",
@@ -609,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6e8d644b",
    "metadata": {},
    "outputs": [
@@ -619,7 +524,7 @@
        "'m'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "b6c4024a",
    "metadata": {},
    "outputs": [
@@ -658,7 +563,7 @@
    "source": [
     "for i in range(42,m_test):\n",
     "    arr = X_test[i]\n",
-    "    test_tensor = (arr).to(\"cuda\")\n",
+    "    test_tensor = (arr).to(device)\n",
     "    test_tensor = torch.unsqueeze(test_tensor, 0)\n",
     "    pred = torch.argmax(model(test_tensor.unsqueeze(dim=0))).item() \n",
     "    truth = torch.argmax(Y_test[i]).item()\n",
